Bunch of Eventoptions and Eventtitles translated
- and some typos fixed

--- a/Translations/German/text-effectCity-change.xml
+++ b/Translations/German/text-effectCity-change.xml
@@ -1292,7 +1292,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_TRAIT_SOLDIER</zType>
-		<Translation>Soldat</Translation>
+		<Translation>Krieger</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_TRAIT_FAMOUNS</zType>
