--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -51,7 +51,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_12</zType>
-		<Translation>Eine Verbesserung auf einen Hügel zu bauen verlängert die Zeit zur fertigstellung um ein Jahr.</Translation>
+		<Translation>Eine Verbesserung auf einem Hügel zu bauen verlängert die Zeit zur fertigstellung um ein Jahr.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_13</zType>
